devOps_project/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-taskmanager
  labels:
    app.kubernetes.io/name: devops-taskmanager
    app.kubernetes.io/part-of: devops-suite
