devOps_project/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-taskmanager
  labels:
    app: devops-backend
spec:
  type: ClusterIP
  selector:
    app: devops-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
