devOps_project/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-taskmanager
  labels:
    app: devops-frontend
spec:
  type: ClusterIP
  selector:
    app: devops-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
